# ljmesa_zmb-centos

./: make.sh  meson.build  meson_options.txt
include/drm-uapi/: egp_drm.h  ljmgpu_drm.h
include/pci_ids/: egp_pci_ids.h
install/lib64/: libEGL.so.1.0.0  libGLESv1_CM.so.1.1.0  libGLESv2.so.2.0.0  libgbm.so.1.0.0  libglapi.so.0.0.0
src/gallium/: meson.build
src/gallium/drivers/egp/: egp_screen.c  egp_screen.h  meson.build  meson.build.bak
src/gallium/drivers/egp/eGP-01/: egp_cmdline.c
src/gallium/drivers/ljmgpu/: ljmgpu_bo.c  ljmgpu_bo.h  ljmgpu_context.c  ljmgpu_context.h  ljmgpu_disk_cache.c  ljmgpu_disk_cache.h  ljmgpu_dispatch.c  ljmgpu_dispatch.h  ljmgpu_draw.c  ljmgpu_draw.h  ljmgpu_dump.c  ljmgpu_dump.h  ljmgpu_fence.c  ljmgpu_fence.h  ljmgpu_format.c  ljmgpu_format.h  ljmgpu_gpu.c  ljmgpu_gpu.h  ljmgpu_job.c  ljmgpu_job.h  ljmgpu_log.c  ljmgpu_log.h  ljmgpu_program.c  ljmgpu_program.h  ljmgpu_query.c  ljmgpu_resource.c  ljmgpu_resource.h  ljmgpu_screen.c  ljmgpu_screen.h  ljmgpu_state.c  ljmgpu_texture.h  ljmgpu_util.c  ljmgpu_util.h  meson.build
test/: x11_triangle  x11_triangle.cpp
test/fpga_load_bin_triangle/: Makefile  command.txt  triangle_shader_bin  triangle_shader_bin.cpp  vbo.txt
test/kmscube_make/: Makefile  kmscube  kmscube.c
test/kmstriange_make/: Makefile  esTransform.c  kmstriangle  kmstriangle.c  kmstriangle.h
test/kmstriangle_meson/: common.h  kmstriangle.c  make.sh  meson.build
test/libdrm/: libdrm.so.2.4.0  make.sh  xf86drm.c  xf86drm.h  xf86drmMode.c  xf86drmMode.h
test/triangle_gbm/: make.sh  triangle  triangle.c
(+25 files in other folders)
